# crisis-monitor

./: .gitignore  RUNBOOK.md
backend/: .env.example  _debug_s2.py  _debug_s3.py  check_old_rows.py  final_verify.py  fix_status_case.py  pyproject.toml  test_acled.py  test_acled_cookie.py  test_api.py  test_dashboard.py  test_dotenv_parse.py  test_fetchers.py  test_frontend.py  test_live_api.py  test_normalize.py  test_retry_live.py  test_retry_unit.py  trigger_and_test.py  trigger_long.py  validate_fix.py  verify_fixes.py  verify_graph.py  verify_url_cache.py
backend/config/: indicators.yaml
backend/src/: main.py  routes.py  scheduler.py
backend/src/agent/: alerts.py  composite_scorer.py  composite_scorer_v2.py  dot_analyzers.py  end_state.py  graph.py  indicator_narrator.py  llm.py  normalize.py  pathway_synthesizer.py
backend/src/db/: database.py
backend/src/fetchers/: __init__.py  credit.py  currencies.py  economic.py  energy_storage.py  market.py  news.py  news_indicators.py
backend/src/middleware/: logging.py  metrics.py
backend/src/prompts/: qualitative_synthesis.j2
backend/src/services/: __init__.py  auth.py  db_writer.py  (+7 more)
backend/tests/: conftest.py  smoke_hardening.py  smoke_test.py  test_agent_pipeline.py  test_alerts.py  test_dot_analyzers.py  test_e2e_data_integrity.py  test_fetcher_graceful_degradation.py  test_hardening.py  test_indicator_narrator.py  test_load_dotenv.py  test_news_indicators.py  test_pipeline_fix.py  test_qualitative_fallback.py  test_system_health.py  test_tier_classifier.py  test_url_validator.py  verify_migration.py
(+57 files in other folders)
