[project]
name = "crisis-monitor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain",
    "langchain-openai",
    "yfinance",
    "httpx",
    "pydantic",
    "feedparser",
    "beautifulsoup4",
    "lxml",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
